--- a/assets/error.html
+++ b/assets/error.html
@@ -15,15 +15,10 @@
     />
     <!-- original style link -->
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>Weather Dashboard</title>
+    <title>error</title>
   </head>
-  <header>
-    <h1>Weather Dashboard</h1>
-  </header>
   <body>
-
-
-    <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script> -->
-    <script src= "./assets/js/script.js"></script>
+      <h1>YOU DONE MESSED UP</h1>
+      <script src="./js/script.js"></script>
   </body>
 </html>
