--- a/index.html
+++ b/index.html
@@ -6,13 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
     <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    />
-    <link
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="assets\css\materialize.min.css" media="screen,projection">
     <!-- original style link -->
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Weather Dashboard</title>
@@ -21,9 +18,80 @@
     <h1>Weather Dashboard</h1>
   </header>
   <body>
+    
+  <!-- INPUT TEXT FOR SEARCH -->
+    <div class="row">
+      <div class="col s12">
+        <div class="row">
+          <div class="input-field col s12">
+            <i class="material-icons prefix"></i>
+            <input type="text" id="autocomplete-input" class="autocomplete">
+            <label for="autocomplete-input">Type City Name Here</label>
+            <a id="searchBtn" class="waves-effect waves-light btn"><i class="material-icons left"></i>Search</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- CARD FOR SEARCHING -->
+    <div class="row right-align">
+      <div class="col s12 m8">
+        <div class="card blue-grey darken-1">
+          <div class="card-content white-text">
+            <span class="card-title">Card Title</span>
+            <p>I am a very simple card. I am good at containing small bits of information.
+            I am convenient because I require little markup to use effectively.</p>
+          </div>
+          <div class="card-action">
+            <a href="#">This is a link</a>
+            <a href="#">This is a link</a>
+          </div>
+        </div>
+      </div>
+    </div>
 
+<!-- LIST OF CITIES -->
 
-    <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script> -->
+<ul class="collection">
+  <li class="collection-item avatar">
+    <img src="#!" alt="" class="circle">
+    <span class="title">Title</span>
+    <p>First Line <br>
+       Second Line
+    </p>
+    <a href="#!" class="secondary-content"><i class="material-icons">grade</i></a>
+  </li>
+  <li class="collection-item avatar">
+    <i class="material-icons circle">folder</i>
+    <span class="title">Title</span>
+    <p>First Line <br>
+       Second Line
+    </p>
+    <a href="#!" class="secondary-content"><i class="material-icons">grade</i></a>
+  </li>
+  <li class="collection-item avatar">
+    <i class="material-icons circle green">insert_chart</i>
+    <span class="title">Title</span>
+    <p>First Line <br>
+       Second Line
+    </p>
+    <a href="#!" class="secondary-content"><i class="material-icons">grade</i></a>
+  </li>
+  <li class="collection-item avatar">
+    <i class="material-icons circle red">play_arrow</i>
+    <span class="title">Title</span>
+    <p>First Line <br>
+       Second Line
+    </p>
+    <a href="#!" class="secondary-content"><i class="material-icons">grade</i></a>
+  </li>
+</ul>
+    <!-- MATERIALIZE-STYLE JS -->
+    <script type="text/javascript" src="assets\js\materialize.min.js"></script>
+    <!-- jQUERY UI -->
+    <!-- <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.js"></script> -->
+    <!-- jQuery LIBRARY -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src= "./assets/js/script.js"></script>
   </body>
 </html>
