--- a/index.html
+++ b/index.html
@@ -25,9 +25,13 @@
         <div class="row">
           <div class="input-field col s12">
             <i class="material-icons prefix"></i>
-            <input type="text" id="autocomplete-input" class="autocomplete">
+            <form id="city-form">
             <label for="autocomplete-input">Type City Name Here</label>
-            <a id="searchBtn" class="waves-effect waves-light btn"><i class="material-icons left"></i>Search</a>
+            <input type="text" id="autocomplete-input" class="autocomplete">
+            <button id="searchBtn" class="waves-effect waves-light btn" type="submit">
+              <i class="material-icons left"></i>Search
+            </button>
+            </form>
           </div>
         </div>
       </div>
@@ -38,9 +42,8 @@
       <div class="col s12 m8">
         <div class="card blue-grey darken-1">
           <div class="card-content white-text">
-            <span class="card-title">Card Title</span>
-            <p>I am a very simple card. I am good at containing small bits of information.
-            I am convenient because I require little markup to use effectively.</p>
+            <span id="cityTitleCard" class="card-title"></span>
+            <p id="date"></p>
           </div>
           <div class="card-action">
             <a href="#">This is a link</a>
@@ -55,7 +58,7 @@
 <ul class="collection">
   <li class="collection-item avatar">
     <img src="#!" alt="" class="circle">
-    <span class="title">Title</span>
+    <ul><span class="title cityList"></span></ul>
     <p>First Line <br>
        Second Line
     </p>
@@ -86,6 +89,8 @@
     <a href="#!" class="secondary-content"><i class="material-icons">grade</i></a>
   </li>
 </ul>
+    <!-- Linking Moment.js for date display -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <!-- MATERIALIZE-STYLE JS -->
     <script type="text/javascript" src="assets\js\materialize.min.js"></script>
     <!-- jQUERY UI -->
