stylized the uvi index correctly

--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
             <!-- MUST POPULATE THE HUMIDITY FOR CURRENT WEATHER -->
             <p id ="humidity"></p>
             <p id="windSpeed"></p>
-            <p id="uvi"></p>
+            <!-- <div> -->
+            <p id="uvi" class="uviBackground right"></p>
             
           </div>
         </div>
